# kinderdom

./: .gitignore  Cargo.toml  readme.md
migrations/2019-12-17-035550_persons/: up.sql
migrations/2019-12-18-044117_profiles/: up.sql
migrations/2020-02-19-070655_articles/: up.sql
migrations/2020-02-19-070711_projects/: up.sql
migrations/2020-02-19-070715_events/: up.sql
migrations/2020-03-03-071648_docs/: down.sql  up.sql
migrations/2020-03-03-071815_donors/: down.sql  up.sql
migrations/2020-03-03-081333_orgs/: down.sql  up.sql
migrations/2020-03-23-064321_events/: up.sql
migrations/2020-03-23-064324_causes/: down.sql  up.sql
migrations/2020-03-23-064334_reports/: down.sql  up.sql
migrations/2020-03-23-064339_donors/: up.sql
migrations/2020-03-25-051710_cats/: down.sql  up.sql
migrations/2020-03-25-064307_events/: up.sql
migrations/2020-03-26-052607_profiles/: up.sql
src/: auth.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  search.rs  tests.rs
src/cli/: profiles.rs
src/db/: mod.rs  models.rs
src/models/: article.rs  cat.rs  cause.rs  doc.rs  donor.rs  event.rs  mod.rs  org.rs  payment.rs  profile.rs  project.rs  report.rs  schema.rs  utils.rs
src/views/: admin.rs  catchers.rs  common.rs  en.rs  login.rs  mod.rs  pages.rs  site.rs
static/css/: custom.css  style.css
static/js/: paylink.js  script.js
templates/: about.html.tera  articles.html.tera  base.html.tera  docs.html.tera  events.html.tera  help.html.tera  index.html.tera  profiles.html.tera  projects.html.tera  tmp.html
templates/admin/: base.html.tera  layout.html.tera  login.html.tera  main.html.tera
templates/en/: about_en.html.tera  cause_details_en.html.tera  causes_en.html.tera  event_details_en.html.tera  events_en.html.tera  index_en.html.tera  layout_en.html.tera  profile_details_en.html.tera  profiles_en.html.tera  reports_en.html.tera  results_en.html.tera  thankyou_en.html.tera
templates/error/: 404.html.tera
templates/pages/: 404.html.tera  500.html.tera  about.html.tera  (+20 more)
(+40 files in other folders)
