[package]
name = "kinderdom"
version = "0.1.0"
authors = ["denis <orca84@protonmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
rocket= {version = "0.4.5", features = ["private-cookies"]}
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
chrono = { version = "0.4.13", features = ["serde"]  }
rocket-multipart-form-data = "0.9.4"
base64 = "0.12.3"
uuid = { version = "0.8.1", features = ["v4"]  }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
sql_lexer = "0.9.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "tera_templates", "serve"]
